# chess-kit

./: .gitignore  Cargo.toml  README.md  STYLE_GUIDE.md  pbcopy  sort.sh
chess-kit-derive/: Cargo.toml
chess-kit-derive/src/: arithmetic.rs  bitops.rs  lib.rs
crates/attack_table/: Cargo.toml
crates/chess-kit-collections/: Cargo.toml
crates/collections/: Cargo.toml  README.md
crates/collections/benches/: baseline_std_hash_map.rs  collections_memory.rs  collections_runtime.rs  fixed_array.rs  fixtures.rs  map_compact_value.rs  map_node_value.rs  map_wide_value.rs  stack_history_state.rs  stack_small_state.rs
crates/collections/benches/fixtures/: compact_value.rs  history_state.rs  mod.rs  node_value.rs  small_state.rs  split_u64_hasher.rs  wide_value.rs
crates/collections/benches/support/: map.rs
crates/collections/benches/utils/: layout.rs  map.rs  mod.rs  stack.rs
crates/collections/src/: fixed_array.rs  lib.rs
crates/collections/src/map/: bucket.rs  entry.rs  mod.rs
crates/collections/src/stack/: iterator.rs  mod.rs
crates/comm/: Cargo.toml
crates/comm/examples/: game.rs
crates/comm/src/: cli.rs  lib.rs
crates/comm/src/uci/: adapter.rs  command.rs  engine.rs  game.rs  handler.rs  mod.rs  protocol.rs
crates/comm/src/uci/types/: mod.rs  parse_error.rs  position.rs  search_limits.rs  uci_move.rs
crates/engine/: Cargo.toml
crates/engine/src/: api.rs  engine.rs  error.rs  lib.rs  moves.rs  session.rs  types.rs
crates/engine/src/types/: board.rs  mod.rs
crates/eval/: Cargo.toml
crates/macros/: Cargo.toml
crates/movegen/: Cargo.toml
crates/perft/: Cargo.toml
crates/perft/src/: lib.rs  perft.rs  perft_data.rs
crates/perft/tests/: perft_full.rs  perft_smoke.rs
crates/perft/tests/common/: case.rs  harness.rs  mod.rs  run_report.rs
crates/perft/tests/fixtures/: perft_full.epd  perft_smoke.epd
crates/position/: Cargo.toml
crates/primitives/: Cargo.toml
crates/search/: Cargo.toml
crates/transposition/: Cargo.toml
docs/: sprt.md  strength-testing-roadmap.md
examples/: game.rs
githooks/: pre-commit
src/: lib.rs  main.rs  uci_adapter.rs
src/attack_table/: magics.rs  mod.rs  moving_pieces.rs  sliding_pieces.rs  table.rs  traits.rs
src/board/: board.rs  castling.rs  display.rs  history.rs  mod.rs  moves.rs  pieces.rs  rules.rs  sides.rs  state.rs  types.rs  zobrist.rs
src/eval/: accumulator.rs  mod.rs  noop_eval.rs
src/movegen/: generate.rs  magics.rs  mod.rs  move_type.rs  movegen.rs  moving_pieces.rs  sliding_pieces.rs  splat.rs
tests/: bench_perft.rs  perft.rs  test_perft.rs  test_zobrist_key.rs
(+231 files in other folders)
