[workspace]
members = [
    "crates/macros",
    "crates/collections",
    "crates/primitives",
    "crates/attack_table",
    "crates/position",
    "crates/movegen",
    "crates/transposition",
    "crates/perft",
]

[package]
name = "chess-kit"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true

[features]
no_tt = []

[dependencies]
chess-kit-derive = { path = "crates/macros" }
chess-kit-collections = { path = "crates/collections" }
chess-kit-primitives = { path = "crates/primitives" }
chess-kit-attack-table = { path = "crates/attack_table" }
chess-kit-position = { path = "crates/position" }
chess-kit-movegen = { path = "crates/movegen" }
chess-kit-transposition = { path = "crates/transposition" }
chess-kit-perft = { path = "crates/perft" }
chess-kit-eval = { path = "crates/eval" }